crates/omnifs-sdk/tests/ui/path_segment/missing_validate.rs
#[omnifs_sdk::path_segment]
struct Bad(String);

fn main() {}
